# inventarioy_mejorado

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  add_admin_rls_profiles.sql  add_is_account_house_pending.sql  add_last_contacted_at.sql  add_sale_type_pending.sql  create_access_pins.sql  create_action_logs.sql  create_pending_accounts.sql  create_public_stats_function.sql  fix_phone_prefix_cuba.sql  index.html  metadata.json  migracion.sql  nomina_setup.sql  optimize_indexes.sql  package-lock.json  package.json  playwright.config.ts  supabase_schema.sql  tsconfig.json  update_constraint.js  vercel.json  vite.config.ts
.github/workflows/: build.yml
e2e/: functional-offline.spec.ts  functional.spec.ts  pin-offline.spec.ts  recommendations.spec.ts  smoke.spec.ts
playwright-report/: index.html
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  updater.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AccessPinsConfig.tsx  Breadcrumbs.tsx  ConnectionStatus.tsx  EmptyState.tsx  ErrorBoundary.tsx  InstallButton.tsx  InventarioYLogo.tsx  OfflineBanner.tsx  OfflineLimitBanner.tsx  OnboardingWizard.tsx  PaginationControls.tsx  PhoneModal.tsx  PinModal.tsx  Skeleton.tsx  SubscriptionBanner.tsx  SyncQueueModal.tsx  SyncQueuePanel.tsx  SyncStatus.tsx  ThemeToggle.tsx  TransitActionModal.tsx  TutorialPromptModal.tsx  UpdateNotification.tsx  WarehouseSelector.tsx
src/design-system/: ThemeProvider.tsx  (+1 more)
tests/: cuban-cycle.spec.ts  offline-stress.spec.ts
(+76 files in other folders)
