[package]
name = "inventarioy"
version = "1.1.0"
description = "InventarioY - Sistema de gestión de inventario"
authors = ["InventarioY"]
edition = "2021"

[lib]
name = "inventarioy_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"

[profile.release]
panic = "unwind"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
